--- a/contacts-mobile-picketlink-secured/pom.xml
+++ b/contacts-mobile-picketlink-secured/pom.xml
@@ -323,7 +323,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-        </dependency>
+        </dependency><dependency><groupId>org.codehaus.jackson</groupId><artifactId>jackson-mapper-asl</artifactId><version>1.9.4</version></dependency>
     </dependencies>
 
     <build>
