--- a/contacts-mobile-picketlink-secured/pom.xml
+++ b/contacts-mobile-picketlink-secured/pom.xml
@@ -263,6 +263,7 @@
             <version>0.5.0</version>
         </dependency>
 
+        <!-- CORS filter so we can reach the server from remote javascript -->
         <dependency>
             <groupId>org.ebaysf.web</groupId>
             <artifactId>cors-filter</artifactId>
@@ -273,6 +274,13 @@
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- The Java UPS Sender Client to send UnifiedPush messages -->
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>unifiedpush-java-client</artifactId>
+            <version>0.5.0</version>
         </dependency>
 
         <!-- The PicketLink API provides a set of components and annotations to secure your CDI application. -->
