--- a/contacts-mobile-picketlink-secured/pom.xml
+++ b/contacts-mobile-picketlink-secured/pom.xml
@@ -54,6 +54,8 @@
 
         <!-- Define the version of the PicketLink BOM -->
         <version.picketlink.javaee.bom>2.6.0.CR2</version.picketlink.javaee.bom>
+        <version.picketlink>2.5.3.SP5-redhat-1</version.picketlink>
+        <version.org.apache.deltaspike>0.5</version.org.apache.deltaspike>
 
         <!-- Other dependency versions -->
         <version.org.eclipse.m2e>1.0.0</version.org.eclipse.m2e>
@@ -93,14 +95,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- The PicketLink BOM provides a complete set of security APIs to be used with Java JEE 6.-->
-            <dependency>
-                <groupId>org.picketlink</groupId>
-                <artifactId>picketlink-javaee-6.0-with-deltaspike</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
-                <version>${version.picketlink.javaee.bom}</version>
-            </dependency>
             <dependency>
                 <groupId>org.jboss.bom.eap</groupId>
                 <artifactId>jboss-javaee-6.0-with-resteasy</artifactId>
@@ -118,6 +112,56 @@
                 <artifactId>javaee-api</artifactId>
                 <version>6.0</version>
             </dependency>
+            <!-- The PicketLink BOM provides a complete set of security APIs to be used with Java JEE 6.-->
+<!--             <dependency> -->
+<!--                 <groupId>org.picketlink</groupId> -->
+<!--                 <artifactId>picketlink-javaee-6.0-with-deltaspike</artifactId> -->
+<!--                 <type>pom</type> -->
+<!--                 <scope>import</scope> -->
+<!--                 <version>${version.picketlink.javaee.bom}</version> -->
+<!--             </dependency> -->
+            <dependency>
+                <groupId>org.jboss.bom.eap</groupId>
+                <artifactId>jboss-javaee-6.0-with-security</artifactId>
+                <version>${version.jboss.bom.eap}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+	        <dependency>
+	            <groupId>org.picketlink</groupId>
+	            <artifactId>picketlink-api</artifactId>
+                <version>${version.picketlink}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.picketlink</groupId>
+	            <artifactId>picketlink-impl</artifactId>
+                <version>${version.picketlink}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.picketlink</groupId>
+	            <artifactId>picketlink-idm-simple-schema</artifactId>
+                <version>${version.picketlink}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.apache.deltaspike.core</groupId>
+	            <artifactId>deltaspike-core-api</artifactId>
+                <version>${version.org.apache.deltaspike}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.apache.deltaspike.core</groupId>
+	            <artifactId>deltaspike-core-impl</artifactId>
+                <version>${version.org.apache.deltaspike}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.apache.deltaspike.modules</groupId>
+	            <artifactId>deltaspike-security-module-api</artifactId>
+                <version>${version.org.apache.deltaspike}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>org.apache.deltaspike.modules</groupId>
+	            <artifactId>deltaspike-security-module-impl</artifactId>
+                <version>${version.org.apache.deltaspike}</version>
+	        </dependency>
         </dependencies>
     </dependencyManagement>
 
